			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02m: *********************************

IMP: (04/27/05, GVG) Modification in mac-app (ant) and Info.plist to get it working on Mac OS X.
"command" is deprecated and it was replaced by "executable"

BUG: (04/26/05, GVG) Exception in postscript generation if directory is write-protected (Bug #289)
FIX: Detect the condition and abort job

BUG: (04/26/05, GVG) Ability to abort PostScript generation (Bug #286)
FIX: Any output call passes Job class in case particular tool wants to monitor abort operation.

BUG: (04/26/05, GVG) 3D View: distance and thickness modifications in 3D Preferences not reflected in 3D View windows
FIX: Code now handles geometries by reference.

BUG: (04/25/05, SMR) Explorer tree expansion is incorrect (Bugs #269 and #285).
FIX: Only expand to the current library after reading it.

IMP (04/25/05, SMR) When replacing a library, error messages are more clear (Bug #255).

IMP/MAN: (04/25/05, SMR) HSpice input can now accept files with the extension .tr1, .tr2, ... (Bug #258).

IMP/MAN: (04/25/05, SMR) Waveform window now allows dragging of the vertical axis on the left (Bug #252).
	Waveform window now shows intermediate tick marks (Bug #241).

************************* Version 8.02l: *********************************

IMP/MAN: (04/22/05, GVG) Alpha control in 3D preferences. Ability to load more than one file per capacitance demo.

BUG: (04/22/05, GVG) Bug found in 3D highlight for primitives (original appearance not restored).
FIX: Extra class holds the information.
                                                               
BUG: (04/22/05. GVG) Exception in Spice netlist if icon instance has a parameter not defined in Schematic (Bug #279)
FIX: Prevent setParam(true) in Examine job (Variable.java:1000)

BUG: (04/21/05, SMR) GDS output writes the year incorrectly.