@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02m: *********************************
 
+BUG: (04/28/05, SMR) Expanding or unexpanding cell instances doesn't redraw right.
+FIX: In CircuitChanges.ExpandUnExpand.doIt(), call PixelDrawing.clearSubCellCache().
+
 IMP: (04/27/05, GVG) Modification in mac-app (ant) and Info.plist to get it working on Mac OS X.
 "command" is deprecated and it was replaced by "executable"
 
